[package]
name = "rust-paillier-voting"
version = "0.1.0"
description = "Voting securised with paillier"
categories = ["cryptography"]

[features]
default = ["keygen"]
keygen = []

[dependencies.paillier]
git = "https://github.com/KZen-networks/rust-paillier"
tag = "v0.3.10"
default-features = false

[dependencies.zk-paillier]
git = "https://github.com/KZen-networks/zk-paillier"
tag = "v0.3.12"
default-features = false

[dependencies.multi-party-ecdsa]
git = "https://github.com/ZenGo-X/multi-party-ecdsa"
tag = "v0.7.1"
default-features = false

[dependencies]
curv = { package = "curv-kzen", version = "0.7", default-features = true }
#serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
zeroize = "1"
round-based = { version = "0.1.4", features = ["dev"] }
thiserror = "1.0.26"
rand = "0.5"
serde_json = "1.0"
#syn = "2.0.23"

